--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Chat with AI</h1>
-        <div class="chat-window">
-            <div id="messages" class="messages"></div>
-            <input type="text" id="userInput" placeholder="Type your message here...">
-            <button id="sendButton">Send</button>
+        <div class="chat-box" id="chat-box"></div>
+        <div class="input-area">
+            <input type="text" id="user-input" placeholder="Type your message..." />
+            <button id="send-btn">Send</button>
         </div>
     </div>
     <script src="script.js"></script>
