--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="chat-box" id="chat-box"></div>
-        <div class="input-area">
-            <input type="text" id="user-input" placeholder="Type your message..." />
-            <button id="send-btn">Send</button>
-        </div>
+        <h1>ChatGPT-like Interface</h1>
+        <div id="chat" class="chat-box"></div>
+        <input type="text" id="userInput" placeholder="Type your question here..." />
+        <button id="sendButton">Send</button>
     </div>
     <script src="script.js"></script>
 </body>
