--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChatGPT-like Interface</title>
+    <title>ChatGPT Clone</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>ChatGPT-like Interface</h1>
-        <div id="chat" class="chat-box"></div>
-        <input type="text" id="userInput" placeholder="Type your question here..." />
-        <button id="sendButton">Send</button>
+    <div class="chat-container">
+        <h1>ChatGPT Clone</h1>
+        <div id="messages" class="messages"></div>
+        <input type="text" id="user-input" placeholder="Type your message..." />
+        <button id="send-button">Send</button>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
