--- a/index.html
+++ b/index.html
@@ -3,16 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChatGPT Clone</title>
+    <title>Profile Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="chat-container">
-        <h1>ChatGPT Clone</h1>
-        <div id="messages" class="messages"></div>
-        <input type="text" id="user-input" placeholder="Type your message..." />
-        <button id="send-button">Send</button>
+    <div class="container">
+        <div class="profile">
+            <img src="https://i.ibb.co/5G56QDV/447634176.jpg" alt="Profile Picture" class="profile-pic">
+            <h1 class="rainbow-text">Ali</h1>
+            <p class="bio rainbow-text">Hello! I'm Ali, a passionate web developer creating innovative web applications. I love working with JavaScript, HTML, and CSS.</p>
+        </div>
+        <div class="info">
+            <h2 class="rainbow-text">Visitor Information:</h2>
+            <p id="ip-info" class="rainbow-text">Loading IP Address...</p>
+            <p id="timezone" class="rainbow-text">Loading Timezone...</p>
+        </div>
     </div>
+
+    <!-- Background Music -->
+    <audio autoplay loop>
+        <source src="https://i.imgur.com/2FzpqCm.mp4" type="audio/mp4">
+        Your browser does not support the audio element.
+    </audio>
 
     <script src="script.js"></script>
 </body>
