--- a/index.html
+++ b/index.html
@@ -7,25 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <div class="profile">
-            <img src="https://i.ibb.co/5G56QDV/447634176.jpg" alt="Profile Picture" class="profile-pic">
-            <h1 class="rainbow-text">Ali</h1>
-            <p class="bio rainbow-text">Hello! I'm Ali, a passionate web developer creating innovative web applications. I love working with JavaScript, HTML, and CSS.</p>
-        </div>
-        <div class="info">
-            <h2 class="rainbow-text">Visitor Information:</h2>
-            <p id="ip-info" class="rainbow-text">Loading IP Address...</p>
-            <p id="timezone" class="rainbow-text">Loading Timezone...</p>
-        </div>
+
+    <div class="profile">
+        <img src="https://i.imgur.com/k7pKRkK.jpeg" alt="Profile Picture" class="profile-pic">
+        <h1>I'm C H R I S T I A N N N N</h1>
+        <p>I'm glad to meet you</p>
+        <h3>Current Time (Asia/Manila):</h3>
+        <div id="time"></div>
     </div>
-
-    <!-- Background Music -->
-    <audio autoplay loop>
-        <source src="https://i.imgur.com/2FzpqCm.mp4" type="audio/mp4">
-        Your browser does not support the audio element.
-    </audio>
-
     <script src="script.js"></script>
 </body>
 </html>
