--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Freedom wall</title>
     <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="https://i.imgur.com/k7pKRkK.jpeg" type="image/jpeg">
 </head>
 <body>
 
