--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
             <p id="riddleText"></p>
         </div>
     </div>
+<div class="profile">
+    <p>Your Profile Content Here</p>
+</div>
+
+<div class="footer">
+    Footer content here
+</div>
+
 
     <script src="script.js"></script>
 </body>
