--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="https://i.imgur.com/k7pKRkK.jpeg" alt="Profile Picture" class="profile-pic">
         <h1>I'm C H R I S T I A N N</h1>
         <p>☕Coffee & Guitar🎸</p>
-        <h3>Current Time (Asia/Manila):</h3>
+        <h3>Current Time : Burauen, Leyte Philippines:</h3>
         <div id="time"></div>
 
         <div class="social-icons">
