--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <p>☕Coffee & Guitar🎸</p>
         <h3>Current Time in Burauen Leyte, Philippines:</h3>
         <div id="time"></div>
+        <h3>Battery Status:</h3>
+<div class="battery-container">
+    <i class="fas fa-battery-half battery-icon"></i>
+    <span id="batteryPercentage">Loading...</span>
+</div>
+
 
         <div class="social-icons">
             <a href="https://github.com" target="_blank" class="icon"><i class="fab fa-github"></i></a>
